# EzTelegramAPI

./: .gitignore  LICENSE  README.md  pyproject.toml
eztelegramapi/: __init__.py  bot.py  telegram.py
