[project]
name = "eztelegramapi"
version = "0.2.0"
description = "Simple Telegram helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/EmptyOverlord/EzTelegramAPI"
Issues = "https://github.com/EmptyOverlord/EzTelegramAPI/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
