[project]
name = "eztelegramapi"
version = "1.0.3"
description = "The simplest way to send Telegram messages from Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/EmptyOverlord/EzTelegramAPI"
Issues = "https://github.com/EmptyOverlord/EzTelegramAPI/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
